--- a/Trillo/sass/_base.scss
+++ b/Trillo/sass/_base.scss
@@ -17,6 +17,10 @@
   --line: 1px solid var(--color-grey-light-3);
 }
 
+$bp-largest: 75em; //1200px/16px
+$bp-large: 68.75em; //1100px/16px
+$bp-medium: 56.25em; //900px/16px
+
 * {
   margin: 0;
   padding: 0;
@@ -30,7 +34,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 62.5%; //1rem = 10px, 10px/16 = 62.8
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%; //1rem = 8px, 8px/16 = 50
+  }
 }
 
 body {
