--- a/Nexter/sass/_features.scss
+++ b/Nexter/sass/_features.scss
@@ -4,17 +4,31 @@
 
   margin: 15rem 0;
 
-  display: grid;
-  // grid-template-columns: repeat(auto-fit, mainmax(25rem, 1fr));
-  // grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
-  align-items: start;
+  // Browser support GRID
+  @supports (display: grid) {
+    display: grid;
+    // grid-template-columns: repeat(auto-fit, mainmax(25rem, 1fr));
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 6rem;
+    align-items: start;
 
-  // grid-template-rows: auto auto;
+    // grid-template-rows: auto auto;
+  }
 }
 
 .feature {
+  // Browser support
+  float: left;
+  width: 33.3333%;
+  margin-bottom: 6rem;
+
+  // Browser support GRID
+  @supports (display: grid) {
+    width: auto;
+    margin-bottom: 0;
+  }
+
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
