--- a/Nexter/sass/_gallery.scss
+++ b/Nexter/sass/_gallery.scss
@@ -2,8 +2,11 @@
   grid-column: full-start / full-end;
 
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  // grid-template-columns: repeat(8, 1fr);
+  // grid-template-rows: repeat(7, 1fr);
+
+  grid-template: repeat(7, 1fr / 8, 1fr);
+
   grid-gap: 1.5rem;
   padding: 1.5rem;
 
